--- a/css/style.css
+++ b/css/style.css
@@ -61,17 +61,17 @@ ul li a{
 }
 
 ul li a:hover{
-    color: antiquewhite;
+    color: rgb(131, 88, 33);
 } 
 
-#container{
-    display: flex;
-    align-items: center;
-}
+
 
 #container img{
     margin-right: 20px;
 
+}
+body{
+    background-color: aqua;
 }
 
 p{
@@ -99,5 +99,47 @@ h1{
 }
 
 img{
-    resize: horizontal;
+    width: 30%;
+}
+
+img{
+    position: static;
+   left: 30px;
+}
+
+h1{
+    font-weight: 0%;
+    font-style: italic;
+}
+
+h2{
+    font-style: italic;
+}
+
+.card{
+    border: 0ch;
+    background-color: antiquewhite;
+    height: 30%;
+    width: 40%;
+}
+
+p{
+    text-align: start;
+} 
+
+img{
+    width: 30%;
+}
+ 
+ol li{
+ display: block;  
+
+}
+  
+img{
+    display: block;
+    margin-left: auto;
+    margin-right: auto;
+    width: 30%;
+
 }
